# react-native-swisseph

./: .gitignore  .npmignore  CONTRIBUTING.md  LICENSE  README.md  RNSwisseph.podspec  assets.gradle  babel.config.js  index.d.ts  index.js  package.json  react-native-swisseph.podspec  react-native.config.js  swisseph.js  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties  settings.gradle
android/cpp/: RNSwissephJavaSpec.cpp  Swisseph.h
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml  AndroidManifestNew.xml
android/src/main/java/com/reactlibrary/: RNSwissephModule.java  RNSwissephPackage.java
android/src/main/java/com/reactlibrary/util/: CopyAssetfiles.java
android/src/main/java/com/reactnativelibrary/swisseph/: SwissephBridge.java  SwissephModule.java  SwissephPackage.java
android/src/main/java/com/reactnativelibrary/swisseph/util/: CopyAssetfiles.java
android/src/main/java/com/swisseph/: SwissephModule.kt  SwissephPackage.kt
assets/: se00016s.se1  se00433s.se1
cpp/: RNSwisseph.cpp  RNSwisseph.h  RNSwissephBaseSpec.cpp  RNSwissephBaseSpec.h  react-native-swisseph.cpp  react-native-swisseph.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/swisseph/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/SwissephExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/SwissephExample.xcodeproj/: project.pbxproj
example/ios/SwissephExample.xcodeproj/xcshareddata/xcschemes/: SwissephExample.xcscheme
example/ios/SwissephExampleTests/: SwissephExampleTests.m
example/src/: App.tsx
ios/: RNSwisseph.h  RNSwisseph.m  RNSwisseph.podspec  RNSwissephObjCSpec.h  RNSwissephObjCSpec.mm  Swisseph.h  Swisseph.mm
ios/RNSwisseph.xcodeproj/: project.pbxproj
ios/RNSwisseph.xcworkspace/: contents.xcworkspacedata
ios/SwissEphemeris/: SwissEphGlue.h  SwissEphGlue.m
lib/commonjs/: NativeSwisseph.js  NativeSwisseph.js.map  Swisseph.js  Swisseph.js.map  index.js  index.js.map
lib/module/: NativeSwisseph.js  NativeSwisseph.js.map  Swisseph.js  Swisseph.js.map  index.js  index.js.map
lib/typescript/src/: NativeSwisseph.d.ts  NativeSwisseph.d.ts.map  Swisseph.d.ts  Swisseph.d.ts.map  index.d.ts  index.d.ts.map
src/: NativeSwisseph.ts  Swisseph.ts  index.ts  index.tsx
swisseph/: SwissEphGlue.c  SwissEphGlue.h
swisseph/lib/: swetest.c
